--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -23,6 +23,7 @@ header{
 #big-e{
     height: 100px;
     width: 100px;
+    margin-left: 30px
 }
 
 #logo-text{
@@ -149,11 +150,11 @@ hr {
 }
 
 #circle-container {
-    width: 300px;
-    height: 300px;
+    width: 200px;
+    height: 200px;
     padding: 30px;
     border-style: solid;
-    border-color: #cccccc;
+    border-color: black;
     border-width: 1px;
     border-radius: 50%;
     margin: 0 auto;
@@ -161,6 +162,9 @@ hr {
 
 #circle-cover-bg {
     background: url("../images/big-E-logo.png") no-repeat center center;
+    background-size: cover;
     height: 100%;
     border-radius: 50%;
+    width: 200px;
+    height: 200px;
 }
