--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Oswald|Lato:300');
+
 * {
     margin:0;
     padding:0;
@@ -168,3 +170,112 @@ hr {
     width: 200px;
     height: 200px;
 }
+
+@media screen and (max-width: 1200px){
+    #why{
+        width: 65%;
+        height: 1200px;
+        margin: 0 auto;
+    }
+
+    #welcome {
+        padding: 30px 0;
+        margin-top: 0;
+    }
+
+    #left-about, #right-about {
+        width:100%;
+        float:left;
+        padding: 0;
+    }
+
+    #center-about{
+        clear: both;
+        width: 100%;
+        float: left;
+        padding: 0;
+    }
+
+    #times div {
+        width: 100%;
+        clear: both;
+        height: 150px;
+        padding: 0;
+    }
+
+    hr {
+        display: none;
+    }
+}
+
+/* For medium screens sizes from 950px wide and down */
+@media screen and (max-width: 950px){
+
+    
+    #menu{
+
+        margin-left: 30px; 
+        margin-bottom: 20px;
+        line-height: 25px;
+    }
+
+    #big-e{
+        height: 100px;
+        width: 100px;
+        margin-left: 30px;
+        margin-top: 80px
+    }
+    
+    #logo-text{
+       visibility: collapse;
+    }
+    
+    /* navigation links */
+    
+    #menu{
+        font-size: 90%;
+
+    }
+    
+    
+    
+    #menu li {
+      
+        list-style-type: none;
+        margin-right: 30px;
+    }
+    
+    #menu a {
+        text-decoration: none;
+        color: inherit;
+    }
+
+    #cover-text{
+        left:0px;
+    }
+
+    #club-ethos{
+        width:90%;
+        height: 1200px;
+        margin: 0 auto;
+    }
+
+    .left-about-heading, .right-about-heading{
+        width: inherit;
+    }
+
+    .left-about-heading h2, .right-about-heading h2{
+        width: 100%;
+        text-align: center;
+    }
+
+    .left-about-heading p, .right-about-heading p{
+        text-align: center;
+        padding: 0 20px 0 20px;
+    }
+
+    
+}
+
+
+
