--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -179,6 +179,11 @@ h1 {
 
 }
 
+.services-container {
+    margin-right:10%;
+    margin-left: 10%
+}
+
 .lang {
     display: flex;
     justify-content: center;
@@ -187,7 +192,7 @@ h1 {
 .lang-img {
     object-fit: cover;
     height: 300px;
-    margin-left: 50px;
+    
     margin-top: 10px;
     margin-bottom: 10px
 }
@@ -196,11 +201,13 @@ h1 {
     height: 300px;
     margin: auto auto;
     line-height: 40px;
-    min-width: 40%;
+    min-width: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    list-style-position: inside;
+    padding: 5px
 }
 
 .prep {
@@ -211,7 +218,7 @@ h1 {
 .prep-img {
     object-fit: cover;
     height: 300px;
-    margin-right: 50px
+ 
 }
 
 .misc {
