add map and contact details to contact page

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -81,6 +81,16 @@ header{
     
 }
 
+.contact {
+    display: flex;
+    flex-direction: row;
+}
+
+.details {
+    padding: 20px;
+    line-height: 50px;
+}
+
 /* Creates the level of zoom for hero image */
 @keyframes hero-blur {
     from{
