--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -81,14 +81,24 @@ header{
     
 }
 
+.map {
+    margin:10px
+}
+
 .contact {
     display: flex;
     flex-direction: row;
+    font-size: x-large;
 }
 
 .details {
     padding: 20px;
-    line-height: 50px;
+    line-height: 70px;
+}
+
+.details p a {
+    text-decoration: none;
+    color: white;
 }
 
 /* Creates the level of zoom for hero image */
@@ -102,8 +112,8 @@ header{
 
 }
 
-#why{
-    height: 600px;
+.why{
+    font-size: larger;
 }
 
 #left-about{
@@ -252,29 +262,7 @@ h1 {
 }
 
 @media screen and (max-width: 1200px){
-    #why{
-        width: 65%;
-        height: 1200px;
-        margin: 0 auto;
-    }
 
-    #welcome {
-        padding: 30px 0;
-        margin-top: 0;
-    }
-
-    #left-about, #right-about {
-        width:100%;
-        float:left;
-        padding: 0;
-    }
-
-    #center-about{
-        clear: both;
-        width: 100%;
-        float: left;
-        padding: 0;
-    }
 
     #times div {
         width: 100%;
@@ -286,7 +274,41 @@ h1 {
     hr {
         display: none;
     }
-}
+
+    .why {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .left-about-heading {
+        width: 100%
+    }
+    
+    .right-about-heading {
+        width: 100%
+    }
+
+    #left-about{
+        padding-top: 30px;
+        width: 100%;
+
+    }
+    
+    #right-about {
+        padding-top: 30px;
+        width: 100%;
+
+    }
+    
+    #center-about {
+        width: 100%;
+        margin: 0 auto;
+    }
+    
+    }
+
 
 /* For medium screens sizes from 950px wide and down */
 @media screen and (max-width: 950px){
@@ -302,12 +324,38 @@ h1 {
     #big-e{
         height: 100px;
         width: 100px;
-        margin-left: 30px;
-        margin-top: 80px
+
     }
     
     #logo-text{
-       visibility: collapse;
+            height: 60px;
+            width: 180px;
+            padding-bottom: 20px;
+        }
+    }
+
+
+    /* For medium screens sizes from 950px wide and down */
+@media screen and (max-width: 820px){
+
+    
+    #menu{
+
+        margin-left: 30px; 
+        margin-bottom: 20px;
+        line-height: 25px;
+    }
+
+    #big-e{
+        margin-top: 70px ;
+        height: 100px;
+        width: 100px;
+
+    }
+    
+    #logo-text{
+        visibility: hidden;
+        }
     }
     
     /* navigation links */
@@ -340,9 +388,6 @@ h1 {
         margin: 0 auto;
     }
 
-    .left-about-heading, .right-about-heading{
-        width: inherit;
-    }
 
     .left-about-heading h2, .right-about-heading h2{
         width: 100%;
@@ -355,7 +400,7 @@ h1 {
     }
 
     
-}
+
 
 
 
