--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -357,6 +357,63 @@ h1 {
         visibility: hidden;
         }
     }
+
+    /* For medium screens sizes from 950px wide and down */
+    @media screen and (max-width: 820px){
+
+    .services-container {
+        margin-right:10%;
+        margin-left: 10%
+    }
+    
+    .lang {
+        display: flex;
+        justify-content: center;
+    }
+    
+    .lang-img {
+        height: 0;
+        width: 0;
+        display: none
+    }
+    
+    .lang-info {
+        height: 300px;
+        margin: auto auto;
+        line-height: 20px;
+        min-width: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        list-style-position: inside;
+        padding: 5px
+    }
+    
+    .prep {
+        display: flex;
+        justify-content: center;
+    }
+    
+    .prep-img {
+        display: none
+     
+    }
+    
+    .misc {
+        display: flex;
+        justify-content: center;
+    }
+    
+    .misc-img {
+        display: none
+    }
+    
+    .misc-info {
+     text-align: start;
+    }
+
+    }
     
     /* navigation links */
     
