--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -364,8 +364,13 @@ h1 {
         }
     }
 
-    /* For medium screens sizes from 950px wide and down */
-    @media screen and (max-width: 820px){
+/* For medium screens sizes from 950px wide and down */
+@media screen and (max-width: 820px){
+
+    #menu{
+    font-size: 100%;
+    letter-spacing: 4px;
+    }
 
     .services-container {
         margin-right:10%;
@@ -437,42 +442,6 @@ h1 {
 
     }
     
-    /* navigation links */
-
-    
-    
-    
-    #menu li {
-      
-        list-style-type: none;
-        margin-right: 30px;
-    }
-    
-    #menu a {
-        text-decoration: none;
-        color: inherit;
-    }
-
-    #cover-text{
-        left:0px;
-    }
-
-    #club-ethos{
-        width:90%;
-        height: 1200px;
-        margin: 0 auto;
-    }
-
-
-    .left-about-heading h2, .right-about-heading h2{
-        width: 100%;
-        text-align: center;
-    }
-
-    .left-about-heading p, .right-about-heading p{
-        text-align: center;
-        padding: 0 20px 0 20px;
-    }
 
     
 
