--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -537,13 +537,13 @@ h1 {
     }
 
     #easter-cover-text {
-        font-size: 130%;
+        font-size: 100%;
         font-family: Oswald;
         text-transform: uppercase;
         letter-spacing: 4px;
         padding: 10px;
         width: 250px;
-        height: 80px;
+        height: auto;
     
         background-color: rgba(241, 109, 107, .7);
     
