update contact page responsive style for mobile devices

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -545,6 +545,12 @@ h1 {
     
     }
 
+    .contact {
+        display: flex;
+        flex-direction: column-reverse;
+        font-size: large;
+    }
+
     }
     
 
