--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -79,7 +79,7 @@ header{
     
 }
 
-#easter-image{
+#easter-image {
     height:300px;
     width: 100%;
     background: url("../images/study.jpg") no-repeat center center;
@@ -132,7 +132,7 @@ header{
 
 
 .map {
-    margin:10px
+    margin:10px;
 }
 
 .contact {
@@ -551,7 +551,12 @@ h1 {
         font-size: large;
     }
 
+iframe {
+  width: 370px
+}      
     }
+
+    
     
 
     
